ves-middle/tests/t1_test_cannot_assign_to_let.test
let x = "ok"
x = "error"

let y = "ok"
mut y = "warning"
y = "ok"

let z = "ok"
{
    let z = "ok"
    {
        mut z = "ok"
        z = "ok"
    }
    z = "error"
}
z = "error"

%output

error: Cannot assign twice to the immutable variable `x`
  ┌─ <source: #a03d8e32d2dad17b>:2:1
  │
2 │ x = "error"
  │ ^
  │ │
  │ help: Consider replacing `let` with `mut` to make the variable mutable

error: Cannot assign twice to the immutable variable `z`
   ┌─ <source: #a03d8e32d2dad17b>:15:5
   │
15 │     z = "error"
   │     ^
   │     │
   │     help: Consider replacing `let` with `mut` to make the variable mutable

error: Cannot assign twice to the immutable variable `z`
   ┌─ <source: #a03d8e32d2dad17b>:17:1
   │
17 │ z = "error"
   │ ^
   │ │
   │ help: Consider replacing `let` with `mut` to make the variable mutable

warning: Attempted to shadow an unused variable `y`
  ┌─ <source: #a03d8e32d2dad17b>:5:5
  │
4 │ let y = "ok"
  │     - First declared on line 4
5 │ mut y = "warning"
  │     ^ Later shadowed here

